Se agregó sección notificaciones

--- a/TPE5-diazpace_molleker_lucero/html/notificaciones.html
+++ b/TPE5-diazpace_molleker_lucero/html/notificaciones.html
@@ -17,32 +17,23 @@
         <section class="container-links">
             <a class="links" href="home.html" >Home</a>
             <a class="links">Mi Playlist</a>
-            <a class="links">Notificaciones</a>
+            <a class="links">Mi cuenta</a>
             <a class="links" href="ayuda.html" >Ayuda</a>
         </section>
     </header>
 
     <div class="cont-cuenta">
-        <h2 class="tit-plan">Comentarios</h2>
-
+        <h2 class="tit-plan">Tus Notificaciones</h2>
         <div id="lista-comentarios">
-            <div class="un-comentario"><p>10/11/2020 - Muy buen tema! -  Juan</p></div>
-            <div class="un-comentario"><p>05/10/2020 - No me gustó mucho :( -  Lucrecia</p></div>
-            <div class="un-comentario"><p>15/09/2020 - Que grande Queen!!! -  Leo</p></div>
-            <div class="un-comentario"><p>01/08/2020 - Escucho a Freddy -  Santiago</p></div>
+            <div class="un-comentario-negrita"><p>25/11/2020 - Muy buena tu playlist! -  Lucrecia</p></div>
+            <div class="un-comentario-negrita"><p>25/11/2020 - Actualizá tu plan con más beneficios -  Spoiler Five Team</p></div>
+            <div class="un-comentario"><p>15/09/2020 - Compartime tu playlist!!! -  Leo</p></div>
+            <div class="un-comentario"><p>01/08/2020 - Conocé los nuevos Planes Premium -  Spoiler Five Team</p></div>
+            <div class="un-comentario"><p>10/07/2020 - Muy buena tu playlist! -  Juan</p></div>
+            <div class="un-comentario"><p>05/06/2020 - Actualizá tu plan con más beneficios -  Spoiler Five Team</p></div>
+            <div class="un-comentario"><p>15/05/2020 - Compartime tu playlist!!! -  Pedro</p></div>
+            <div class="un-comentario"><p>01/04/2020 - Conocé los nuevos Planes Premium -  Spoiler Five Team</p></div>
         </div>
-
-        <form class="flex">
-            <textarea id="text-comentario" rows="10" cols="80">Comentá...</textarea>
-            <div>
-                <button id="btn-descartar-datos" ><a id="descartar" href="home.html">Descartar</a></button>
-                <button id="btn-modificar-datos" > <a href="home.html">Enviar</a></button>
-            </div>
-            <div id="actualizar-plan">
-                <p id="actualiza"> Accedé a más beneficios!</p>
-                <button id="btn-act-plan" > <a href="">Actualizar mi plan</a> </button>
-            </div>
-        </form>
     </div>
 
     <footer class="contact"> 
