actualizacion de inicio de sesion y registrarse, add atras

--- a/TPE5-diazpace_molleker_lucero/html/index.html
+++ b/TPE5-diazpace_molleker_lucero/html/index.html
@@ -14,9 +14,11 @@
     <header class="navegation">
         <div class="logo-navigation"></div>
 
+        <div class="relleno"></div>
+
         <section class="container-links">
-            <button class="login"><a href="inicio-sesion.html">Iniciar sesión</a></button>
-            <button class="registrarse">Registrarse</button>
+            <a href="inicio-sesion.html"><button class="login">Iniciar sesión</a></button>
+            <a href="#opciones"><button class="registrarse">Registrarse</a></button>
         </section>
     </header>
 
@@ -27,15 +29,51 @@
             <button class="prueba">Prueba ahora</button>        
     </section>
 
-    <section class="opciones-login">
-        <button class="login"><a href="inicio-sesion.html">Iniciar sesión</button>
-        <button class="registrarse">Registrarse</button>
-    </section>
+    <article id="opciones">
+        
+        <h2 class="tit2-plan">Elegi tu opcion favorita y disfruta!</h2>
+        
+        <section class="planes">
 
+            <div class="plan plan1">
+                <img src="../images/plan_free.jpg" alt="plan free" width="250px" height="500px">
+            </div>
+            <div class="plan plan2">
+                <img src="../images/plan_individual.jpg" alt="plan individual" width="250px" height="500px">
+                <!--<h3 class="h-planes">Premium 2</h3>
+                <p class="p-planes">Sin propagandas y mejor calidad de sonido</p>
+                <p class="p-planes precio">20$</p>-->
+            </div>
+            <div class="plan plan3">
+                <img src="../images/plan_duo.jpg" alt="plan duo" width="250px" height="500px">
+
+                <!--<h3 class="h-planes">Premium 3</h3>
+                <p class="p-planes">Sin propagandas, mejor calidad de sonido y sugerencias</p>
+                <p class="p-planes precio">30$</p>-->
+            </div>
+            <div class="plan plan3">
+                <img src="../images/plan_familiar.jpg" alt="plan familiar" width="250px" height="500px">
+
+                <!--<h3 class="h-planes">Premium 3</h3>
+                <p class="p-planes">Sin propagandas, mejor calidad de sonido y sugerencias</p>
+                <p class="p-planes precio">30$</p>-->
+            </div>
+
+        </section>
+    </article>
+
+
+    <article class="opciones-login">
+        <button class="login"><a href="inicio-sesion.html">Iniciar sesión</a></button>
+        <button class="registrarse">Registrarse</button>
+    </article>
+
+<!--
     <footer class="contact"> 
         <section class="social-media">
         </section>
     </footer>
+-->
 
 </body>
 </html>
