--- a/TPE5-diazpace_molleker_lucero/html/registrarse.html
+++ b/TPE5-diazpace_molleker_lucero/html/registrarse.html
@@ -12,17 +12,21 @@
     <header class="header-logo">
         <img class="logo-negro generico" src="../images/logo-negro.png">
     </header>
-    <h1>Bienvenido!</h1>
-    <form class="flex">
-        <label>Ingresa tu usuario</label>
-        <input class="input-login" type="text">
-        <label>Ingresa tu contraseña</label>
-        <input class="input-login" type="text">
-        <label>Ingresa tu e-mail</label>
-        <input class="input-login" type="text">
-        <input class="btn-form basico" type="submit" value="Plan básico">
-        <input class="btn-form premium" type="submit" value="Plan premium">
-    </form>
+
+    <!--flecha atras--><a href="index.html"><img class="atras" src="../images/icono_flecha_atras.png"></a>
     
+    <article>
+        <h1>Bienvenido!</h1>
+        <form class="flex">
+            <label>Ingresa tu usuario</label>
+            <input class="input-login" type="text">
+            <label>Ingresa tu contraseña</label>
+            <input class="input-login" type="text">
+            <label>Ingresa tu e-mail</label>
+            <input class="input-login" type="text">
+            <input class="btn-form basico" type="submit" value="Plan básico">
+            <input class="btn-form premium" type="submit" value="Plan premium">
+        </form>
+    </article>
 </body>
 </html>
