--- a/TPE5-diazpace_molleker_lucero/html/home.html
+++ b/TPE5-diazpace_molleker_lucero/html/home.html
@@ -15,7 +15,7 @@
         <section class="container-links">
             <a class="links">Mi Playlist</a>
             <a class="links" href="mi-cuenta.html" >Mi cuenta</a>
-            <a class="links">Notificaciones</a>
+            <a class="links" href="notificaciones.html">Notificaciones</a>
             <a class="links" href="ayuda.html" >Ayuda</a>
         </section>
     </header>
@@ -105,9 +105,6 @@
     <section class="player">
             
     </section>
-    <footer class="contact"> 
-        <section class="social-media">
-        </section>
-    </footer>
+    
 </body>
 </html>
