--- a/TPE5-diazpace_molleker_lucero/html/buscado.html
+++ b/TPE5-diazpace_molleker_lucero/html/buscado.html
@@ -56,9 +56,9 @@
                 <p>4.5 min</p>
                 <section class="score">
                     <div class="star star-enabled"></div>
-                    <div class="star star-disabled"></div>
-                    <div class="star star-disabled"></div>
-                    <div class="star star-disabled"></div>
+                    <div class="star star-enabled"></div>
+                    <div class="star star-enabled"></div>
+                    <div class="star star-enabled"></div>
                     <div class="star star-disabled"></div>
                 </section>
             </section>
