empezando canciones falta detalles del index

--- a/TPE5-diazpace_molleker_lucero/html/index.html
+++ b/TPE5-diazpace_molleker_lucero/html/index.html
@@ -18,16 +18,19 @@
 
         <section class="container-links">
             <a href="inicio-sesion.html"><button class="login">Iniciar sesión</a></button>
-            <a href="#opciones"><button class="registrarse">Registrarse</a></button>
+            <a href="#opciones"class="registrarse"><button class="registrarse">Registrarse</a></button>
         </section>
     </header>
 
-    <section class="presentacion">
-            <h1 class="h1-index">
-                Toda tu música favorita!
-            </h1>
-            <button class="prueba">Prueba ahora</button>        
-    </section>
+    <article class="presentacion">
+        <section class="index">        
+            <h1 class="h1-index">Toda tu música favorita!</h1>
+        </section>    
+        <section class="index">
+            <button class="btn-index">Prueba ahora</button>        
+        </section>    
+        
+    </article>
 
     <article id="opciones">
         
@@ -36,29 +39,11 @@
         <section class="planes">
 
             <div class="plan plan1">
-                <img src="../images/plan_free.jpg" alt="plan free" width="250px" height="500px">
+                <div class="plan1"></div>
+                <div class="plan2"></div>
+                <div class="plan3"></div>
+                <div class="plan4"></div>
             </div>
-            <div class="plan plan2">
-                <img src="../images/plan_individual.jpg" alt="plan individual" width="250px" height="500px">
-                <!--<h3 class="h-planes">Premium 2</h3>
-                <p class="p-planes">Sin propagandas y mejor calidad de sonido</p>
-                <p class="p-planes precio">20$</p>-->
-            </div>
-            <div class="plan plan3">
-                <img src="../images/plan_duo.jpg" alt="plan duo" width="250px" height="500px">
-
-                <!--<h3 class="h-planes">Premium 3</h3>
-                <p class="p-planes">Sin propagandas, mejor calidad de sonido y sugerencias</p>
-                <p class="p-planes precio">30$</p>-->
-            </div>
-            <div class="plan plan3">
-                <img src="../images/plan_familiar.jpg" alt="plan familiar" width="250px" height="500px">
-
-                <!--<h3 class="h-planes">Premium 3</h3>
-                <p class="p-planes">Sin propagandas, mejor calidad de sonido y sugerencias</p>
-                <p class="p-planes precio">30$</p>-->
-            </div>
-
         </section>
     </article>
 
