--- a/TPE5-diazpace_molleker_lucero/html/cancion.html
+++ b/TPE5-diazpace_molleker_lucero/html/cancion.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header class="navegation">
-        <div class="logo-navigation"></div>
+        <a href="home.html" class="logo-navigation"></a>
         <input type="text" placeholder="  Buscar..." class="search">
         <div class="lupa"></div>
         <section class="container-links">
@@ -29,7 +29,6 @@
         <section class="puntaje"></section>
     </article>
     <section class="player">        
-
         <!--reproductor del navegador-->
         <audio controls="controls">
             <source src="track.ogg" type="audio/ogg" />
