--- a/TPE5-diazpace_molleker_lucero/html/index.html
+++ b/TPE5-diazpace_molleker_lucero/html/index.html
@@ -12,8 +12,7 @@
 </head>
 <body>
     <header class="navegation">
-        <div class="logo-navigation"></div>
-
+        <a href="home.html" class="logo-navigation"></a>
         <div class="relleno"></div>
 
         <section class="container-links">
@@ -34,23 +33,23 @@
 
     <article id="opciones">
         
-        <h2 class="tit2-plan">Elegi tu opcion favorita y disfruta!</h2>
-        
-        <section class="planes">
+        <h2 class="tit-plan">Elegi tu opcion favorita y disfruta!</h2>
 
-            <div class="plan plan1">
-                <div class="plan1"></div>
-                <div class="plan2"></div>
-                <div class="plan3"></div>
-                <div class="plan4"></div>
-            </div>
+        <section class="planes">
+            <div class="plan1"></div>
+            <div class="plan2"></div>
+            <div class="plan3"></div>
+            <div class="plan4"></div>
         </section>
+        <section class="btn-plan">
+            <button class="btn-form inicio-sesion">Confirmar plan</button>
+        </section>
+
     </article>
 
-
     <article class="opciones-login">
-        <button class="login"><a href="inicio-sesion.html">Iniciar sesión</a></button>
-        <button class="registrarse">Registrarse</button>
+        <a href="inicio-sesion.html"></a><button class="login">Iniciar sesión</a></button>
+        <a href="#opciones"class=""><button class="registrarse">Registrarse</button></a>
     </article>
 
 <!--
