--- a/TPE5-diazpace_molleker_lucero/html/mi-cuenta.html
+++ b/TPE5-diazpace_molleker_lucero/html/mi-cuenta.html
@@ -12,12 +12,11 @@
 </head>
 <body>
     <header class="navegation">
-        <div class="logo-navigation"></div>
+        <a href="home.html" class="logo-navigation"></a>
         <input type="text" placeholder="  Buscar..." class="search">
         <section class="container-links">
-            <a class="links" href="home.html" >Home</a>
             <a class="links">Mi Playlist</a>
-            <a class="links">Notificaciones</a>
+            <a class="links" href="notificaciones.html">Notificaciones</a>
             <a class="links" href="ayuda.html" >Ayuda</a>
         </section>
     </header>
@@ -43,10 +42,14 @@
             </div>
         </form>
     </div>
+    <!--FOOTER CON EL REPRODUCTOR UNA VEZ QUE ENTRAMOS-->
+    <section class="player">        
+        <!--reproductor del navegador-->
+        <audio controls="controls">
+            <source src="track.ogg" type="audio/ogg" />
+            <source src="track.mp3" type="audio/mpeg" />
+        </audio>
+    </section>
 
-    <footer class="contact"> 
-        <section class="social-media">
-        </section>
-    </footer>
 </body>
 </html>
