--- a/TPE5-diazpace_molleker_lucero/html/notificaciones.html
+++ b/TPE5-diazpace_molleker_lucero/html/notificaciones.html
@@ -12,10 +12,9 @@
 </head>
 <body>
     <header class="navegation">
-        <div class="logo-navigation"></div>
+        <a href="home.html" class="logo-navigation"></a>
         <input type="text" placeholder="  Buscar..." class="search">
         <section class="container-links">
-            <a class="links" href="home.html" >Home</a>
             <a class="links">Mi Playlist</a>
             <a class="links">Mi cuenta</a>
             <a class="links" href="ayuda.html" >Ayuda</a>
@@ -36,9 +35,12 @@
         </div>
     </div>
 
-    <footer class="contact"> 
-        <section class="social-media">
-        </section>
-    </footer>
+    <section class="player">        
+        <!--reproductor del navegador-->
+        <audio controls="controls">
+            <source src="track.ogg" type="audio/ogg" />
+            <source src="track.mp3" type="audio/mpeg" />
+        </audio>
+    </section>
 </body>
 </html>
