--- a/TPE5-diazpace_molleker_lucero/html/buscado.html
+++ b/TPE5-diazpace_molleker_lucero/html/buscado.html
@@ -36,11 +36,11 @@
                 <p class="p-info">Hey you - Pink Floyd</p>
                 <p>5.3 min</p>
                 <section class="score">
-                    <div class="star star-enabled"></div>
-                    <div class="star star-enabled"></div>
-                    <div class="star star-enabled"></div>
-                    <div class="star star-enabled"></div>
-                    <div class="star star-enabled"></div>
+                    <div onmouseover="marcarEstrellas(0,0)" class="star star-enabled star-disabled"></div>
+                    <div onmouseover="marcarEstrellas(0,1)" class="star star-enabled star-disabled"></div>
+                    <div onmouseover="marcarEstrellas(0,2)" class="star star-enabled star-disabled"></div>
+                    <div onmouseover="marcarEstrellas(0,3)" class="star star-enabled star-disabled"></div>
+                    <div onmouseover="marcarEstrellas(0,4)" class="star star-enabled star-disabled"></div>
                 </section>
             </section>
                     <section class="actions">
@@ -55,11 +55,11 @@
                 <p class="p-info">Café la humedad - Cacho Castaña</p>
                 <p>4.5 min</p>
                 <section class="score">
-                    <div class="star star-enabled"></div>
-                    <div class="star star-enabled"></div>
-                    <div class="star star-enabled"></div>
-                    <div class="star star-enabled"></div>
-                    <div class="star star-disabled"></div>
+                    <div class="star star-enabled star-disabled"></div>
+                    <div class="star star-enabled star-disabled"></div>
+                    <div class="star star-enabled star-disabled"></div>
+                    <div class="star star-enabled star-disabled"></div>
+                    <div class="star star-enabled star-disabled"></div>
                 </section>
             </section>
                     <section class="actions">
@@ -74,11 +74,11 @@
                 <p class="p-info">I want to be free - Freddy Mercury</p>
                 <p>3.5 min</p>
                 <section class="score">
-                    <div class="star star-enabled"></div>
-                    <div class="star star-enabled"></div>
-                    <div class="star star-enabled"></div>
-                    <div class="star star-disabled"></div>
-                    <div class="star star-disabled"></div>
+                    <div class="star star-enabled star-disabled"></div>
+                    <div class="star star-enabled star-disabled"></div>
+                    <div class="star star-enabled star-disabled"></div>
+                    <div class="star star-enabled star-disabled"></div>
+                    <div class="star star-enabled star-disabled"></div>
                 </section>
             </section>
                     <section class="actions">
@@ -93,11 +93,11 @@
                 <p class="p-info">Radio gaga - Queen</p>
                 <p>6.1 min</p>
                 <section class="score">
-                    <div class="star star-enabled"></div>
-                    <div class="star star-enabled"></div>
-                    <div class="star star-disabled"></div>
-                    <div class="star star-disabled"></div>
-                    <div class="star star-disabled"></div>
+                    <div class="star star-enabled star-disabled"></div>
+                    <div class="star star-enabled star-disabled"></div>
+                    <div class="star star-enabled star-disabled"></div>
+                    <div class="star star-enabled star-disabled"></div>
+                    <div class="star star-enabled star-disabled"></div>
                 </section>
             </section>
                     <section class="actions">
@@ -112,11 +112,11 @@
                 <p class="p-info">Beat it - Michael Jackson</p>
                 <p>5.8 min</p>
                 <section class="score">
-                    <div class="star star-enabled"></div>
-                    <div class="star star-enabled"></div>
-                    <div class="star star-disabled"></div>
-                    <div class="star star-disabled"></div>
-                    <div class="star star-disabled"></div>
+                    <div class="star star-enabled star-disabled"></div>
+                    <div class="star star-enabled star-disabled"></div>
+                    <div class="star star-enabled star-disabled"></div>
+                    <div class="star star-enabled star-disabled"></div>
+                    <div class="star star-enabled star-disabled"></div>
                 </section>
             </section>
                     <section class="actions">
@@ -127,8 +127,10 @@
         </section>
     </section>
     <div class="mas-canciones"></div>
-    <!-- <section class="player">
+    <div class="espacio-blanco"></div>
+    <section class="player">
             
-    </section> -->
+    </section>
+    <script src="../js/puntuacion.js"></script>
 </body>
 </html>
