index listo, problema en boton inicio de sesion

--- a/TPE5-diazpace_molleker_lucero/html/index.html
+++ b/TPE5-diazpace_molleker_lucero/html/index.html
@@ -26,7 +26,7 @@
             <h1 class="h1-index">Toda tu música favorita!</h1>
         </section>    
         <section class="index">
-            <button class="btn-index">Prueba ahora</button>        
+            <a href="#opciones"><button class="btn-index">Prueba ahora</button></a>
         </section>    
         
     </article>
@@ -36,21 +36,21 @@
         <h2 class="tit-plan">Elegi tu opcion favorita y disfruta!</h2>
 
         <section class="planes">
-            <div class="plan1"></div>
-            <div class="plan2"></div>
-            <div class="plan3"></div>
-            <div class="plan4"></div>
+            <div class="plan1"><a href="registrarse.html" class="btn-plan"><button class="btn-plan inicio-sesion">Seleccionar plan</button></a>
+            </div>
+            <div class="plan2"><a href="registrarse.html" class="btn-plan"><button class="btn-plan inicio-sesion">Seleccionar plan</button></a>
+            </div>
+            <div class="plan3"><a href="registrarse.html" class="btn-plan"><button class="btn-plan inicio-sesion">Seleccionar plan</button></a>
+            </div>
+            <div class="plan4"><a href="registrarse.html" class="btn-plan"><button class="btn-plan inicio-sesion">Seleccionar plan</button></a>
+            </div>
         </section>
-        <section class="btn-plan">
-            <button class="btn-form inicio-sesion">Confirmar plan</button>
-        </section>
-
     </article>
 
-    <article class="opciones-login">
-        <a href="inicio-sesion.html"></a><button class="login">Iniciar sesión</a></button>
+    <div class="opciones-login" >
+        <a href="inicio-sesion.html"></a><button class="login">Iniciar sesión</button></a>
         <a href="#opciones"class=""><button class="registrarse">Registrarse</button></a>
-    </article>
+    </div>
 
 <!--
     <footer class="contact"> 
