--- a/TPE5-diazpace_molleker_lucero/html/inicio-sesion.html
+++ b/TPE5-diazpace_molleker_lucero/html/inicio-sesion.html
@@ -29,7 +29,7 @@
             <label>Ingresa tu contraseña</label>
             <input class="input-login" type="password" placeholder="  Pone tu contraseña" required>
             
-            <button class="btn-form inicio-sesion" value="Iniciar sesión"><a class="btn-form" href="home.html">Iniciar sesión</a></button>
+            <a href="home.html" class="blanco"><button class="btn-form inicio-sesion">Iniciar sesión</a></button>
         </form>
     </article>
 
