--- a/TPE5-diazpace_molleker_lucero/html/opciones-plan.html
+++ b/TPE5-diazpace_molleker_lucero/html/opciones-plan.html
@@ -24,18 +24,17 @@
         <h2 class="tit-plan">Elegi tu opcion favorita y disfruta!</h2>
 
         <section class="planes">
-            <a href="registrarse.html"><div class="plan1"></div></a>
-            <a href="registrarse.html"><div class="plan2"></div></a>
-            <a href="registrarse.html"><div class="plan3"></div></a>
-            <a href="registrarse.html"><div class="plan4"></div></a>
+            <div class="plan1"><a href="registrarse.html" class="btn-plan"><button class="btn-plan inicio-sesion">Seleccionar plan</a></button>
+            </div>
+            <div class="plan2"><a href="registrarse.html" class="btn-plan"><button class="btn-plan inicio-sesion">Seleccionar plan</a></button>
+            </div>
+            <div class="plan3"><a href="registrarse.html" class="btn-plan"><button class="btn-plan inicio-sesion">Seleccionar plan</a></button>
+            </div>
+            <div class="plan4"><a href="registrarse.html" class="btn-plan"><button class="btn-plan inicio-sesion">Seleccionar plan</a></button>
+            </div>
         </section>
-        <section class="flex">
-            <button class="btn-form inicio-sesion">Confirmar plan</button>
-
-            <button class="btn-form inicio-sesion">Confirmar plan</button>
-        </section>
-
     </article>
+
   
 
 
