Se agregó sección Actualizar Plan

--- a/TPE5-diazpace_molleker_lucero/html/actualizar-plan.html
+++ b/TPE5-diazpace_molleker_lucero/html/actualizar-plan.html
@@ -21,27 +21,28 @@
         </section>
     </header>
 
-    <div class="cont-cuenta">
-        <h2 class="tit-plan">Estos son tus datos</h2>
-        <form class="flex">
-            <label>Tu usuario</label>
-            <input class="input-login" type="text" placeholder="  juan-perez">
-            <label>Tu contraseña</label>
-            <input class="input-login" type="text" placeholder="  juan2020">
-            <label>Tu e-mail</label>
-            <input class="input-login" type="text" placeholder="  juan-perez@gmail.com">
-            <label>Tu plan</label>
-            <input class="input-login" type="text" placeholder="  Básico">
+
+    <article id="opciones">
+        
+        <h2 class="tit-plan">Elegí tu opción favorita y disfrutá!</h2>
+
+        <section class="planes">
+            <div class="plan1"></div>
+            <div class="plan2"></div>
+            <div class="plan3"></div>
+            <div class="plan4"></div>
+        </section>
+        <div class="flex">
             <div>
-                <button id="btn-descartar-datos" ><a id="descartar" href="home.html">Descartar</a></button>
-                <button id="btn-modificar-datos" > <a href="home.html">Modificar</a></button>
+            <button class="btn-form inicio-sesion un-plan"><a href="home.html">Confirmar Plan Free</a></button>
+            <button class="btn-form inicio-sesion un-plan"><a href="home.html">Confirmar Plan Individual</a></button>
+            <button class="btn-form inicio-sesion un-plan"><a href="home.html">Confirmar Plan Duo</a></button>
+            <button class="btn-form inicio-sesion un-plan"><a href="home.html">Confirmar Plan Familiar</a></button>
             </div>
-            <div id="actualizar-plan">
-                <p id="actualiza"> Accedé a más beneficios!</p>
-                <button id="btn-act-plan" > <a href="">Actualizá tu plan</a> </button>
-            </div>
-        </form>
-    </div>
+        </div>
+
+    </article>
+
     <!--FOOTER CON EL REPRODUCTOR UNA VEZ QUE ENTRAMOS-->
     <section class="player">        
         <!--reproductor del navegador-->
