--- a/TPE5-diazpace_molleker_lucero/html/notificaciones.html
+++ b/TPE5-diazpace_molleker_lucero/html/notificaciones.html
@@ -33,6 +33,12 @@
             <div class="un-comentario"><p>15/05/2020 - Compartime tu playlist!!! -  Pedro</p></div>
             <div class="un-comentario"><p>01/04/2020 - Conocé los nuevos Planes Premium -  Spoiler Five Team</p></div>
         </div>
+        <form class="flex">
+            <div id="actualizar-plan-notific">
+                <p id="actualiza"> Accedé a más beneficios!</p>
+                <button id="btn-act-plan" > <a href="">Actualizá tu plan</a> </button>
+            </div>
+        </form>
     </div>
 
     <section class="player">        
