--- a/TPE5-diazpace_molleker_lucero/html/comentarios.html
+++ b/TPE5-diazpace_molleker_lucero/html/comentarios.html
@@ -40,14 +40,18 @@
             </div>
             <div id="actualizar-plan">
                 <p id="actualiza"> Accedé a más beneficios!</p>
-                <button id="btn-act-plan" > <a href="">Actualizar mi plan</a> </button>
+                <button id="btn-act-plan" > <a href="">Actualizá tu plan</a> </button>
             </div>
         </form>
     </div>
 
-    <footer class="contact"> 
-        <section class="social-media">
-        </section>
-    </footer>
+<!--FOOTER CON EL REPRODUCTOR UNA VEZ QUE ENTRAMOS-->
+<section class="player">        
+    <!--reproductor del navegador-->
+    <audio controls="controls">
+        <source src="track.ogg" type="audio/ogg" />
+        <source src="track.mp3" type="audio/mpeg" />
+    </audio>
+</section>
 </body>
 </html>
