Se agregó funcionalidad a sección actualizar Plan

--- a/TPE5-diazpace_molleker_lucero/html/actualizar-plan.html
+++ b/TPE5-diazpace_molleker_lucero/html/actualizar-plan.html
@@ -25,7 +25,9 @@
     <article id="opciones">
         
         <h2 class="tit-plan">Elegí tu opción favorita y disfrutá!</h2>
-
+        <div class="flex">
+            <p id="texto-plan"> Tu plan actual es: </p> <input id="tu-plan-es" type="text" placeholder="FREE">
+        </div>
         <section class="planes">
             <div class="plan1"></div>
             <div class="plan2"></div>
@@ -34,10 +36,10 @@
         </section>
         <div class="flex">
             <div>
-            <button class="btn-form inicio-sesion un-plan"><a href="home.html">Confirmar Plan Free</a></button>
-            <button class="btn-form inicio-sesion un-plan"><a href="home.html">Confirmar Plan Individual</a></button>
-            <button class="btn-form inicio-sesion un-plan"><a href="home.html">Confirmar Plan Duo</a></button>
-            <button class="btn-form inicio-sesion un-plan"><a href="home.html">Confirmar Plan Familiar</a></button>
+            <button class="btn-form inicio-sesion un-plan"><a href="home.html">Confirmar Plan</a></button>
+            <button class="btn-form inicio-sesion un-plan"><a href="home.html">Confirmar Plan</a></button>
+            <button class="btn-form inicio-sesion un-plan"><a href="home.html">Confirmar Plan</a></button>
+            <button class="btn-form inicio-sesion un-plan"><a href="home.html">Confirmar Plan</a></button>
             </div>
         </div>
 
@@ -46,10 +48,10 @@
     <!--FOOTER CON EL REPRODUCTOR UNA VEZ QUE ENTRAMOS-->
     <section class="player">        
         <!--reproductor del navegador-->
-        <audio controls="controls">
+<!--         <audio controls="controls">
             <source src="track.ogg" type="audio/ogg" />
             <source src="track.mp3" type="audio/mpeg" />
-        </audio>
+        </audio> -->
     </section>
 
 </body>
