--- a/TPE5-diazpace_molleker_lucero/html/mi-cuenta.html
+++ b/TPE5-diazpace_molleker_lucero/html/mi-cuenta.html
@@ -31,14 +31,14 @@
             <label>Tu e-mail</label>
             <input class="input-login" type="text" placeholder="  juan-perez@gmail.com">
             <label>Tu plan</label>
-            <input class="input-login" type="text" placeholder="  Básico">
+            <input class="input-login" type="text" placeholder="  FREE">
             <div>
                 <button id="btn-descartar-datos" ><a id="descartar" href="home.html">Descartar</a></button>
                 <button id="btn-modificar-datos" > <a href="home.html">Modificar</a></button>
             </div>
-            <div id="actualizar-plan">
+            <div id="actualizar-plan-notific">
                 <p id="actualiza"> Accedé a más beneficios!</p>
-                <button id="btn-act-plan" > <a href="">Actualizá tu plan</a> </button>
+                <button id="btn-act-plan" > <a href="actualizar-plan.html">Actualizá tu plan</a> </button>
             </div>
         </form>
     </div>
