--- a/TPE5-diazpace_molleker_lucero/html/notificaciones.html
+++ b/TPE5-diazpace_molleker_lucero/html/notificaciones.html
@@ -16,7 +16,7 @@
         <input type="text" placeholder="  Buscar..." class="search">
         <section class="container-links">
             <a class="links">Mi Playlist</a>
-            <a class="links">Mi cuenta</a>
+            <a class="links" href="mi-cuenta.html">Mi cuenta</a>
             <a class="links" href="ayuda.html" >Ayuda</a>
         </section>
     </header>
@@ -36,7 +36,7 @@
         <form class="flex">
             <div id="actualizar-plan-notific">
                 <p id="actualiza"> Accedé a más beneficios!</p>
-                <button id="btn-act-plan" > <a href="">Actualizá tu plan</a> </button>
+                <button id="btn-act-plan" > <a href="actualizar-plan.html">Actualizá tu plan</a> </button>
             </div>
         </form>
     </div>
