registroOk eliminado, modificacion de ayuda, inicio y registrarse

--- a/TPE5-diazpace_molleker_lucero/html/ayuda-inicio.html
+++ b/TPE5-diazpace_molleker_lucero/html/ayuda-inicio.html
@@ -20,8 +20,10 @@
             <a class="links" href="notificaciones.html">Notificaciones</a>
         </section>
     </header>
+
     <div class="ayuda">
-        <!--flecha atras--><a href="home.html"><div class="back"></div></a>
+    <!--flecha atras--><a href="index.html"><div class="back"></div></a>
+
         <h2 class="tit-plan">¿En qué podemos ayudarte?</h2>
         <div id="linea-buscar">
             <div id="adentro">
