--- a/TPE5-diazpace_molleker_lucero/html/inicio-sesion.html
+++ b/TPE5-diazpace_molleker_lucero/html/inicio-sesion.html
@@ -15,7 +15,7 @@
         <div class="relleno"></div>
 
         <section class="container-links">
-            <a class="links" href="ayuda.html">Ayuda</a>
+            <a class="links" href="ayuda-inicio.html">Ayuda</a>
         </section>
     </header>
     
