--- a/TPE5-diazpace_molleker_lucero/html/ayuda.html
+++ b/TPE5-diazpace_molleker_lucero/html/ayuda.html
@@ -25,7 +25,7 @@
         <h2 class="tit-plan">¿En qué podemos ayudarte?</h2>
         <div id="linea-buscar">
             <div id="adentro">
-                <input id="buscar" type="search" placeholder="  Ingrese texto ...">
+                <input id="buscar" type="search" placeholder="  Buscar ayuda ...">
                 <span>
                 <button id="btn-buscar"> Buscar </button>
                 </span>
@@ -65,10 +65,10 @@
 <!--FOOTER CON EL REPRODUCTOR UNA VEZ QUE ENTRAMOS-->
     <section class="player">        
         <!--reproductor del navegador-->
-        <audio controls="controls">
+<!--         <audio controls="controls">
             <source src="track.ogg" type="audio/ogg" />
             <source src="track.mp3" type="audio/mpeg" />
-        </audio>
+        </audio> -->
     </section>
     
 </body>
