--- a/TPE5-diazpace_molleker_lucero/html/cancion.html
+++ b/TPE5-diazpace_molleker_lucero/html/cancion.html
@@ -26,8 +26,22 @@
         </section>
         <section><h1 class="artista"><a href="">Michael Jackson</a> - <a href="">Bet it</a></h1>        </section>
         <section class="iconos"></section>
-        <section class="puntaje"></section>
-    </article>
+        
+        <form id="form">
+            <p class="clasificacion">
+              <input id="radio6" type="radio" name="estrellas" value="5"><!--
+              --><label for="radio6">★</label><!--
+              --><input id="radio7" type="radio" name="estrellas" value="4"><!--
+              --><label for="radio7">★</label><!--
+              --><input id="radio8" type="radio" name="estrellas" value="3"><!--
+              --><label for="radio8">★</label><!--
+              --><input id="radio9" type="radio" name="estrellas" value="2"><!--
+              --><label for="radio9">★</label><!--
+              --><input id="radio10" type="radio" name="estrellas" value="1"><!--
+              --><label for="radio10">★</label>
+            </p>
+        </form>   
+     </article>
     <section class="player">        
         <!--reproductor del navegador-->
         <audio controls="controls">
