--- a/TPE5-diazpace_molleker_lucero/html/index.html
+++ b/TPE5-diazpace_molleker_lucero/html/index.html
@@ -31,8 +31,7 @@
         
     </article>
 
-    <article id="opciones">
-        
+    <article id="opciones" class="plan-list">        
         <h2 class="tit-plan">Elegi tu opcion favorita y disfruta!</h2>
 
         <section class="planes">
@@ -47,7 +46,7 @@
         </section>
     </article>
 
-    <div class="opciones-login" >
+    <div class="opciones-login" id="log-list">
         <a href="inicio-sesion.html"></a><button class="login">Iniciar sesión</button></a>
         <a href="#opciones"class=""><button class="registrarse">Registrarse</button></a>
     </div>
