--- a/TPE5-diazpace_molleker_lucero/html/cancion.html
+++ b/TPE5-diazpace_molleker_lucero/html/cancion.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap" rel="stylesheet">
     <title>Spoiler Five</title>
 </head>
 <body>
@@ -21,12 +23,18 @@
     </header>
 
     <article class="content">
+        <div class="back"></div>
+
         <section class="cancion">
             <img src="../images/michael.png" alt="cancion" width="350px" height="350px">
         </section>
-        <section><h1 class="artista"><a href="">Michael Jackson</a> - <a href="">Bet it</a></h1>        </section>
+        <section class="artista">
+            <a href=""><h1>Michael Jackson </h1></a> 
+            <a href=""><p class="span"> - Smooth Criminal</p></a>        
+        </section>
+
         <section class="iconos"></section>
-        
+
         <form id="form">
             <p class="clasificacion">
               <input id="radio6" type="radio" name="estrellas" value="5"><!--
@@ -42,11 +50,15 @@
             </p>
         </form>   
      </article>
+
+     <div class="espacio-blanco"></div>
+
     <section class="player">        
         <!--reproductor del navegador-->
-        <audio controls="controls">
-            <source src="track.ogg" type="audio/ogg" />
-            <source src="track.mp3" type="audio/mpeg" />
+        <audio controls="controls" class="barra">
+            <!--<source src="track.ogg" type="audio/ogg" />-->
+            <source src="/audio/Smooth Criminal.mp3" type="audio/mp3" />
+
         </audio>
     </section>
     
